@@ -1,0 +1,18 @@
+/* - - - - - - - - - - - - - - - - - - - - -
+Animated spinner icon
+
+$Id$
+- - - - - - - - - - - - - - - - - - - - - */
+
+span.spinner {
+	background-image: url('../../images/spinner/f1f1f1.gif');
+}
+/* - - - - - - - - - - - - - - - - - - - - -
+Animated spinner icon
+
+$Id$
+- - - - - - - - - - - - - - - - - - - - - */
+
+span.spinner {
+	background-image: url('../../images/spinner/f1f1f1.gif');
+}
